Compiladores/LenguajePatito/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NULA

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> PROGRAMA ID PTOCOMA Vars INICIO Cuerpo FIN
Rule 2     Vars -> VARS ListaDeclVar
Rule 3     Vars -> empty
Rule 4     ListaDeclVar -> ID DOSPTOS Tipo PTOCOMA ListaDeclVar
Rule 5     ListaDeclVar -> ID DOSPTOS Tipo PTOCOMA
Rule 6     Tipo -> ENTERO
Rule 7     Tipo -> FLOTANTE
Rule 8     Cuerpo -> LBRACE ListaEstatuto RBRACE
Rule 9     ListaEstatuto -> Estatuto ListaEstatuto
Rule 10    ListaEstatuto -> empty
Rule 11    Estatuto -> Asigna
Rule 12    Estatuto -> Condicion
Rule 13    Estatuto -> Ciclo
Rule 14    Estatuto -> Imprime PTOCOMA
Rule 15    Estatuto -> Llamada PTOCOMA
Rule 16    Estatuto -> Cuerpo
Rule 17    Asigna -> ID ASIG Expresion PTOCOMA
Rule 18    Imprime -> ESCRIBE LPAREN ListaImprime RPAREN
Rule 19    ListaImprime -> ItemImprime
Rule 20    ListaImprime -> ListaImprime COMA ItemImprime
Rule 21    ItemImprime -> Expresion
Rule 22    ItemImprime -> LETRERO
Rule 23    ItemImprime -> LETRERO_KW
Rule 24    Condicion -> SI LPAREN Expresion RPAREN Cuerpo PTOCOMA
Rule 25    Condicion -> SI LPAREN Expresion RPAREN Cuerpo SINO Cuerpo PTOCOMA
Rule 26    Ciclo -> MIENTRAS LPAREN Expresion RPAREN HAZ Cuerpo PTOCOMA
Rule 27    Llamada -> ID LPAREN RPAREN
Rule 28    Llamada -> ID LPAREN ListaArgs RPAREN
Rule 29    ListaArgs -> Expresion
Rule 30    ListaArgs -> ListaArgs COMA Expresion
Rule 31    Expresion -> Exp
Rule 32    Expresion -> Exp Oprel Exp
Rule 33    Oprel -> MAYOR
Rule 34    Oprel -> MENOR
Rule 35    Oprel -> DIF
Rule 36    Oprel -> IGUALDAD
Rule 37    Oprel -> MAYORIG
Rule 38    Oprel -> MENORIG
Rule 39    Exp -> Exp MAS Termino
Rule 40    Exp -> Exp MENOS Termino
Rule 41    Exp -> Termino
Rule 42    Termino -> Termino POR Factor
Rule 43    Termino -> Termino DIV Factor
Rule 44    Termino -> Factor
Rule 45    Factor -> LPAREN Expresion RPAREN
Rule 46    Factor -> MAS Factor
Rule 47    Factor -> MENOS Factor
Rule 48    Factor -> ID
Rule 49    Factor -> CTE_ENT
Rule 50    Factor -> CTE_FLOT
Rule 51    empty -> <empty>

Terminals, with rules where they appear

ASIG                 : 17
COMA                 : 20 30
CTE_ENT              : 49
CTE_FLOT             : 50
DIF                  : 35
DIV                  : 43
DOSPTOS              : 4 5
ENTERO               : 6
ESCRIBE              : 18
FIN                  : 1
FLOTANTE             : 7
HAZ                  : 26
ID                   : 1 4 5 17 27 28 48
IGUALDAD             : 36
INICIO               : 1
LBRACE               : 8
LETRERO              : 22
LETRERO_KW           : 23
LPAREN               : 18 24 25 26 27 28 45
MAS                  : 39 46
MAYOR                : 33
MAYORIG              : 37
MENOR                : 34
MENORIG              : 38
MENOS                : 40 47
MIENTRAS             : 26
NULA                 : 
POR                  : 42
PROGRAMA             : 1
PTOCOMA              : 1 4 5 14 15 17 24 25 26
RBRACE               : 8
RPAREN               : 18 24 25 26 27 28 45
SI                   : 24 25
SINO                 : 25
VARS                 : 2
error                : 

Nonterminals, with rules where they appear

Asigna               : 11
Ciclo                : 13
Condicion            : 12
Cuerpo               : 1 16 24 25 25 26
Estatuto             : 9
Exp                  : 31 32 32 39 40
Expresion            : 17 21 24 25 26 29 30 45
Factor               : 42 43 44 46 47
Imprime              : 14
ItemImprime          : 19 20
ListaArgs            : 28 30
ListaDeclVar         : 2 4
ListaEstatuto        : 8 9
ListaImprime         : 18 20
Llamada              : 15
Oprel                : 32
Programa             : 0
Termino              : 39 40 41 42 43
Tipo                 : 4 5
Vars                 : 1
empty                : 3 10

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . PROGRAMA ID PTOCOMA Vars INICIO Cuerpo FIN

    PROGRAMA        shift and go to state 2

    Programa                       shift and go to state 1

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> PROGRAMA . ID PTOCOMA Vars INICIO Cuerpo FIN

    ID              shift and go to state 3


state 3

    (1) Programa -> PROGRAMA ID . PTOCOMA Vars INICIO Cuerpo FIN

    PTOCOMA         shift and go to state 4


state 4

    (1) Programa -> PROGRAMA ID PTOCOMA . Vars INICIO Cuerpo FIN
    (2) Vars -> . VARS ListaDeclVar
    (3) Vars -> . empty
    (51) empty -> .

    VARS            shift and go to state 6
    INICIO          reduce using rule 51 (empty -> .)

    Vars                           shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) Programa -> PROGRAMA ID PTOCOMA Vars . INICIO Cuerpo FIN

    INICIO          shift and go to state 8


state 6

    (2) Vars -> VARS . ListaDeclVar
    (4) ListaDeclVar -> . ID DOSPTOS Tipo PTOCOMA ListaDeclVar
    (5) ListaDeclVar -> . ID DOSPTOS Tipo PTOCOMA

    ID              shift and go to state 10

    ListaDeclVar                   shift and go to state 9

state 7

    (3) Vars -> empty .

    INICIO          reduce using rule 3 (Vars -> empty .)


state 8

    (1) Programa -> PROGRAMA ID PTOCOMA Vars INICIO . Cuerpo FIN
    (8) Cuerpo -> . LBRACE ListaEstatuto RBRACE

    LBRACE          shift and go to state 12

    Cuerpo                         shift and go to state 11

state 9

    (2) Vars -> VARS ListaDeclVar .

    INICIO          reduce using rule 2 (Vars -> VARS ListaDeclVar .)


state 10

    (4) ListaDeclVar -> ID . DOSPTOS Tipo PTOCOMA ListaDeclVar
    (5) ListaDeclVar -> ID . DOSPTOS Tipo PTOCOMA

    DOSPTOS         shift and go to state 13


state 11

    (1) Programa -> PROGRAMA ID PTOCOMA Vars INICIO Cuerpo . FIN

    FIN             shift and go to state 14


state 12

    (8) Cuerpo -> LBRACE . ListaEstatuto RBRACE
    (9) ListaEstatuto -> . Estatuto ListaEstatuto
    (10) ListaEstatuto -> . empty
    (11) Estatuto -> . Asigna
    (12) Estatuto -> . Condicion
    (13) Estatuto -> . Ciclo
    (14) Estatuto -> . Imprime PTOCOMA
    (15) Estatuto -> . Llamada PTOCOMA
    (16) Estatuto -> . Cuerpo
    (51) empty -> .
    (17) Asigna -> . ID ASIG Expresion PTOCOMA
    (24) Condicion -> . SI LPAREN Expresion RPAREN Cuerpo PTOCOMA
    (25) Condicion -> . SI LPAREN Expresion RPAREN Cuerpo SINO Cuerpo PTOCOMA
    (26) Ciclo -> . MIENTRAS LPAREN Expresion RPAREN HAZ Cuerpo PTOCOMA
    (18) Imprime -> . ESCRIBE LPAREN ListaImprime RPAREN
    (27) Llamada -> . ID LPAREN RPAREN
    (28) Llamada -> . ID LPAREN ListaArgs RPAREN
    (8) Cuerpo -> . LBRACE ListaEstatuto RBRACE

    RBRACE          reduce using rule 51 (empty -> .)
    ID              shift and go to state 24
    SI              shift and go to state 25
    MIENTRAS        shift and go to state 26
    ESCRIBE         shift and go to state 27
    LBRACE          shift and go to state 12

    ListaEstatuto                  shift and go to state 15
    Estatuto                       shift and go to state 16
    empty                          shift and go to state 17
    Asigna                         shift and go to state 18
    Condicion                      shift and go to state 19
    Ciclo                          shift and go to state 20
    Imprime                        shift and go to state 21
    Llamada                        shift and go to state 22
    Cuerpo                         shift and go to state 23

state 13

    (4) ListaDeclVar -> ID DOSPTOS . Tipo PTOCOMA ListaDeclVar
    (5) ListaDeclVar -> ID DOSPTOS . Tipo PTOCOMA
    (6) Tipo -> . ENTERO
    (7) Tipo -> . FLOTANTE

    ENTERO          shift and go to state 29
    FLOTANTE        shift and go to state 30

    Tipo                           shift and go to state 28

state 14

    (1) Programa -> PROGRAMA ID PTOCOMA Vars INICIO Cuerpo FIN .

    $end            reduce using rule 1 (Programa -> PROGRAMA ID PTOCOMA Vars INICIO Cuerpo FIN .)


state 15

    (8) Cuerpo -> LBRACE ListaEstatuto . RBRACE

    RBRACE          shift and go to state 31


state 16

    (9) ListaEstatuto -> Estatuto . ListaEstatuto
    (9) ListaEstatuto -> . Estatuto ListaEstatuto
    (10) ListaEstatuto -> . empty
    (11) Estatuto -> . Asigna
    (12) Estatuto -> . Condicion
    (13) Estatuto -> . Ciclo
    (14) Estatuto -> . Imprime PTOCOMA
    (15) Estatuto -> . Llamada PTOCOMA
    (16) Estatuto -> . Cuerpo
    (51) empty -> .
    (17) Asigna -> . ID ASIG Expresion PTOCOMA
    (24) Condicion -> . SI LPAREN Expresion RPAREN Cuerpo PTOCOMA
    (25) Condicion -> . SI LPAREN Expresion RPAREN Cuerpo SINO Cuerpo PTOCOMA
    (26) Ciclo -> . MIENTRAS LPAREN Expresion RPAREN HAZ Cuerpo PTOCOMA
    (18) Imprime -> . ESCRIBE LPAREN ListaImprime RPAREN
    (27) Llamada -> . ID LPAREN RPAREN
    (28) Llamada -> . ID LPAREN ListaArgs RPAREN
    (8) Cuerpo -> . LBRACE ListaEstatuto RBRACE

    RBRACE          reduce using rule 51 (empty -> .)
    ID              shift and go to state 24
    SI              shift and go to state 25
    MIENTRAS        shift and go to state 26
    ESCRIBE         shift and go to state 27
    LBRACE          shift and go to state 12

    Estatuto                       shift and go to state 16
    ListaEstatuto                  shift and go to state 32
    empty                          shift and go to state 17
    Asigna                         shift and go to state 18
    Condicion                      shift and go to state 19
    Ciclo                          shift and go to state 20
    Imprime                        shift and go to state 21
    Llamada                        shift and go to state 22
    Cuerpo                         shift and go to state 23

state 17

    (10) ListaEstatuto -> empty .

    RBRACE          reduce using rule 10 (ListaEstatuto -> empty .)


state 18

    (11) Estatuto -> Asigna .

    ID              reduce using rule 11 (Estatuto -> Asigna .)
    SI              reduce using rule 11 (Estatuto -> Asigna .)
    MIENTRAS        reduce using rule 11 (Estatuto -> Asigna .)
    ESCRIBE         reduce using rule 11 (Estatuto -> Asigna .)
    LBRACE          reduce using rule 11 (Estatuto -> Asigna .)
    RBRACE          reduce using rule 11 (Estatuto -> Asigna .)


state 19

    (12) Estatuto -> Condicion .

    ID              reduce using rule 12 (Estatuto -> Condicion .)
    SI              reduce using rule 12 (Estatuto -> Condicion .)
    MIENTRAS        reduce using rule 12 (Estatuto -> Condicion .)
    ESCRIBE         reduce using rule 12 (Estatuto -> Condicion .)
    LBRACE          reduce using rule 12 (Estatuto -> Condicion .)
    RBRACE          reduce using rule 12 (Estatuto -> Condicion .)


state 20

    (13) Estatuto -> Ciclo .

    ID              reduce using rule 13 (Estatuto -> Ciclo .)
    SI              reduce using rule 13 (Estatuto -> Ciclo .)
    MIENTRAS        reduce using rule 13 (Estatuto -> Ciclo .)
    ESCRIBE         reduce using rule 13 (Estatuto -> Ciclo .)
    LBRACE          reduce using rule 13 (Estatuto -> Ciclo .)
    RBRACE          reduce using rule 13 (Estatuto -> Ciclo .)


state 21

    (14) Estatuto -> Imprime . PTOCOMA

    PTOCOMA         shift and go to state 33


state 22

    (15) Estatuto -> Llamada . PTOCOMA

    PTOCOMA         shift and go to state 34


state 23

    (16) Estatuto -> Cuerpo .

    ID              reduce using rule 16 (Estatuto -> Cuerpo .)
    SI              reduce using rule 16 (Estatuto -> Cuerpo .)
    MIENTRAS        reduce using rule 16 (Estatuto -> Cuerpo .)
    ESCRIBE         reduce using rule 16 (Estatuto -> Cuerpo .)
    LBRACE          reduce using rule 16 (Estatuto -> Cuerpo .)
    RBRACE          reduce using rule 16 (Estatuto -> Cuerpo .)


state 24

    (17) Asigna -> ID . ASIG Expresion PTOCOMA
    (27) Llamada -> ID . LPAREN RPAREN
    (28) Llamada -> ID . LPAREN ListaArgs RPAREN

    ASIG            shift and go to state 35
    LPAREN          shift and go to state 36


state 25

    (24) Condicion -> SI . LPAREN Expresion RPAREN Cuerpo PTOCOMA
    (25) Condicion -> SI . LPAREN Expresion RPAREN Cuerpo SINO Cuerpo PTOCOMA

    LPAREN          shift and go to state 37


state 26

    (26) Ciclo -> MIENTRAS . LPAREN Expresion RPAREN HAZ Cuerpo PTOCOMA

    LPAREN          shift and go to state 38


state 27

    (18) Imprime -> ESCRIBE . LPAREN ListaImprime RPAREN

    LPAREN          shift and go to state 39


state 28

    (4) ListaDeclVar -> ID DOSPTOS Tipo . PTOCOMA ListaDeclVar
    (5) ListaDeclVar -> ID DOSPTOS Tipo . PTOCOMA

    PTOCOMA         shift and go to state 40


state 29

    (6) Tipo -> ENTERO .

    PTOCOMA         reduce using rule 6 (Tipo -> ENTERO .)


state 30

    (7) Tipo -> FLOTANTE .

    PTOCOMA         reduce using rule 7 (Tipo -> FLOTANTE .)


state 31

    (8) Cuerpo -> LBRACE ListaEstatuto RBRACE .

    FIN             reduce using rule 8 (Cuerpo -> LBRACE ListaEstatuto RBRACE .)
    ID              reduce using rule 8 (Cuerpo -> LBRACE ListaEstatuto RBRACE .)
    SI              reduce using rule 8 (Cuerpo -> LBRACE ListaEstatuto RBRACE .)
    MIENTRAS        reduce using rule 8 (Cuerpo -> LBRACE ListaEstatuto RBRACE .)
    ESCRIBE         reduce using rule 8 (Cuerpo -> LBRACE ListaEstatuto RBRACE .)
    LBRACE          reduce using rule 8 (Cuerpo -> LBRACE ListaEstatuto RBRACE .)
    RBRACE          reduce using rule 8 (Cuerpo -> LBRACE ListaEstatuto RBRACE .)
    PTOCOMA         reduce using rule 8 (Cuerpo -> LBRACE ListaEstatuto RBRACE .)
    SINO            reduce using rule 8 (Cuerpo -> LBRACE ListaEstatuto RBRACE .)


state 32

    (9) ListaEstatuto -> Estatuto ListaEstatuto .

    RBRACE          reduce using rule 9 (ListaEstatuto -> Estatuto ListaEstatuto .)


state 33

    (14) Estatuto -> Imprime PTOCOMA .

    ID              reduce using rule 14 (Estatuto -> Imprime PTOCOMA .)
    SI              reduce using rule 14 (Estatuto -> Imprime PTOCOMA .)
    MIENTRAS        reduce using rule 14 (Estatuto -> Imprime PTOCOMA .)
    ESCRIBE         reduce using rule 14 (Estatuto -> Imprime PTOCOMA .)
    LBRACE          reduce using rule 14 (Estatuto -> Imprime PTOCOMA .)
    RBRACE          reduce using rule 14 (Estatuto -> Imprime PTOCOMA .)


state 34

    (15) Estatuto -> Llamada PTOCOMA .

    ID              reduce using rule 15 (Estatuto -> Llamada PTOCOMA .)
    SI              reduce using rule 15 (Estatuto -> Llamada PTOCOMA .)
    MIENTRAS        reduce using rule 15 (Estatuto -> Llamada PTOCOMA .)
    ESCRIBE         reduce using rule 15 (Estatuto -> Llamada PTOCOMA .)
    LBRACE          reduce using rule 15 (Estatuto -> Llamada PTOCOMA .)
    RBRACE          reduce using rule 15 (Estatuto -> Llamada PTOCOMA .)


state 35

    (17) Asigna -> ID ASIG . Expresion PTOCOMA
    (31) Expresion -> . Exp
    (32) Expresion -> . Exp Oprel Exp
    (39) Exp -> . Exp MAS Termino
    (40) Exp -> . Exp MENOS Termino
    (41) Exp -> . Termino
    (42) Termino -> . Termino POR Factor
    (43) Termino -> . Termino DIV Factor
    (44) Termino -> . Factor
    (45) Factor -> . LPAREN Expresion RPAREN
    (46) Factor -> . MAS Factor
    (47) Factor -> . MENOS Factor
    (48) Factor -> . ID
    (49) Factor -> . CTE_ENT
    (50) Factor -> . CTE_FLOT

    LPAREN          shift and go to state 48
    MAS             shift and go to state 44
    MENOS           shift and go to state 46
    ID              shift and go to state 41
    CTE_ENT         shift and go to state 49
    CTE_FLOT        shift and go to state 50

    Expresion                      shift and go to state 42
    Exp                            shift and go to state 43
    Termino                        shift and go to state 45
    Factor                         shift and go to state 47

state 36

    (27) Llamada -> ID LPAREN . RPAREN
    (28) Llamada -> ID LPAREN . ListaArgs RPAREN
    (29) ListaArgs -> . Expresion
    (30) ListaArgs -> . ListaArgs COMA Expresion
    (31) Expresion -> . Exp
    (32) Expresion -> . Exp Oprel Exp
    (39) Exp -> . Exp MAS Termino
    (40) Exp -> . Exp MENOS Termino
    (41) Exp -> . Termino
    (42) Termino -> . Termino POR Factor
    (43) Termino -> . Termino DIV Factor
    (44) Termino -> . Factor
    (45) Factor -> . LPAREN Expresion RPAREN
    (46) Factor -> . MAS Factor
    (47) Factor -> . MENOS Factor
    (48) Factor -> . ID
    (49) Factor -> . CTE_ENT
    (50) Factor -> . CTE_FLOT

    RPAREN          shift and go to state 51
    LPAREN          shift and go to state 48
    MAS             shift and go to state 44
    MENOS           shift and go to state 46
    ID              shift and go to state 41
    CTE_ENT         shift and go to state 49
    CTE_FLOT        shift and go to state 50

    ListaArgs                      shift and go to state 52
    Expresion                      shift and go to state 53
    Exp                            shift and go to state 43
    Termino                        shift and go to state 45
    Factor                         shift and go to state 47

state 37

    (24) Condicion -> SI LPAREN . Expresion RPAREN Cuerpo PTOCOMA
    (25) Condicion -> SI LPAREN . Expresion RPAREN Cuerpo SINO Cuerpo PTOCOMA
    (31) Expresion -> . Exp
    (32) Expresion -> . Exp Oprel Exp
    (39) Exp -> . Exp MAS Termino
    (40) Exp -> . Exp MENOS Termino
    (41) Exp -> . Termino
    (42) Termino -> . Termino POR Factor
    (43) Termino -> . Termino DIV Factor
    (44) Termino -> . Factor
    (45) Factor -> . LPAREN Expresion RPAREN
    (46) Factor -> . MAS Factor
    (47) Factor -> . MENOS Factor
    (48) Factor -> . ID
    (49) Factor -> . CTE_ENT
    (50) Factor -> . CTE_FLOT

    LPAREN          shift and go to state 48
    MAS             shift and go to state 44
    MENOS           shift and go to state 46
    ID              shift and go to state 41
    CTE_ENT         shift and go to state 49
    CTE_FLOT        shift and go to state 50

    Expresion                      shift and go to state 54
    Exp                            shift and go to state 43
    Termino                        shift and go to state 45
    Factor                         shift and go to state 47

state 38

    (26) Ciclo -> MIENTRAS LPAREN . Expresion RPAREN HAZ Cuerpo PTOCOMA
    (31) Expresion -> . Exp
    (32) Expresion -> . Exp Oprel Exp
    (39) Exp -> . Exp MAS Termino
    (40) Exp -> . Exp MENOS Termino
    (41) Exp -> . Termino
    (42) Termino -> . Termino POR Factor
    (43) Termino -> . Termino DIV Factor
    (44) Termino -> . Factor
    (45) Factor -> . LPAREN Expresion RPAREN
    (46) Factor -> . MAS Factor
    (47) Factor -> . MENOS Factor
    (48) Factor -> . ID
    (49) Factor -> . CTE_ENT
    (50) Factor -> . CTE_FLOT

    LPAREN          shift and go to state 48
    MAS             shift and go to state 44
    MENOS           shift and go to state 46
    ID              shift and go to state 41
    CTE_ENT         shift and go to state 49
    CTE_FLOT        shift and go to state 50

    Expresion                      shift and go to state 55
    Exp                            shift and go to state 43
    Termino                        shift and go to state 45
    Factor                         shift and go to state 47

state 39

    (18) Imprime -> ESCRIBE LPAREN . ListaImprime RPAREN
    (19) ListaImprime -> . ItemImprime
    (20) ListaImprime -> . ListaImprime COMA ItemImprime
    (21) ItemImprime -> . Expresion
    (22) ItemImprime -> . LETRERO
    (23) ItemImprime -> . LETRERO_KW
    (31) Expresion -> . Exp
    (32) Expresion -> . Exp Oprel Exp
    (39) Exp -> . Exp MAS Termino
    (40) Exp -> . Exp MENOS Termino
    (41) Exp -> . Termino
    (42) Termino -> . Termino POR Factor
    (43) Termino -> . Termino DIV Factor
    (44) Termino -> . Factor
    (45) Factor -> . LPAREN Expresion RPAREN
    (46) Factor -> . MAS Factor
    (47) Factor -> . MENOS Factor
    (48) Factor -> . ID
    (49) Factor -> . CTE_ENT
    (50) Factor -> . CTE_FLOT

    LETRERO         shift and go to state 59
    LETRERO_KW      shift and go to state 60
    LPAREN          shift and go to state 48
    MAS             shift and go to state 44
    MENOS           shift and go to state 46
    ID              shift and go to state 41
    CTE_ENT         shift and go to state 49
    CTE_FLOT        shift and go to state 50

    ListaImprime                   shift and go to state 56
    ItemImprime                    shift and go to state 57
    Expresion                      shift and go to state 58
    Exp                            shift and go to state 43
    Termino                        shift and go to state 45
    Factor                         shift and go to state 47

state 40

    (4) ListaDeclVar -> ID DOSPTOS Tipo PTOCOMA . ListaDeclVar
    (5) ListaDeclVar -> ID DOSPTOS Tipo PTOCOMA .
    (4) ListaDeclVar -> . ID DOSPTOS Tipo PTOCOMA ListaDeclVar
    (5) ListaDeclVar -> . ID DOSPTOS Tipo PTOCOMA

    INICIO          reduce using rule 5 (ListaDeclVar -> ID DOSPTOS Tipo PTOCOMA .)
    ID              shift and go to state 10

    ListaDeclVar                   shift and go to state 61

state 41

    (48) Factor -> ID .

    POR             reduce using rule 48 (Factor -> ID .)
    DIV             reduce using rule 48 (Factor -> ID .)
    MAS             reduce using rule 48 (Factor -> ID .)
    MENOS           reduce using rule 48 (Factor -> ID .)
    MAYOR           reduce using rule 48 (Factor -> ID .)
    MENOR           reduce using rule 48 (Factor -> ID .)
    DIF             reduce using rule 48 (Factor -> ID .)
    IGUALDAD        reduce using rule 48 (Factor -> ID .)
    MAYORIG         reduce using rule 48 (Factor -> ID .)
    MENORIG         reduce using rule 48 (Factor -> ID .)
    PTOCOMA         reduce using rule 48 (Factor -> ID .)
    RPAREN          reduce using rule 48 (Factor -> ID .)
    COMA            reduce using rule 48 (Factor -> ID .)


state 42

    (17) Asigna -> ID ASIG Expresion . PTOCOMA

    PTOCOMA         shift and go to state 62


state 43

    (31) Expresion -> Exp .
    (32) Expresion -> Exp . Oprel Exp
    (39) Exp -> Exp . MAS Termino
    (40) Exp -> Exp . MENOS Termino
    (33) Oprel -> . MAYOR
    (34) Oprel -> . MENOR
    (35) Oprel -> . DIF
    (36) Oprel -> . IGUALDAD
    (37) Oprel -> . MAYORIG
    (38) Oprel -> . MENORIG

    PTOCOMA         reduce using rule 31 (Expresion -> Exp .)
    RPAREN          reduce using rule 31 (Expresion -> Exp .)
    COMA            reduce using rule 31 (Expresion -> Exp .)
    MAS             shift and go to state 64
    MENOS           shift and go to state 65
    MAYOR           shift and go to state 66
    MENOR           shift and go to state 67
    DIF             shift and go to state 68
    IGUALDAD        shift and go to state 69
    MAYORIG         shift and go to state 70
    MENORIG         shift and go to state 71

    Oprel                          shift and go to state 63

state 44

    (46) Factor -> MAS . Factor
    (45) Factor -> . LPAREN Expresion RPAREN
    (46) Factor -> . MAS Factor
    (47) Factor -> . MENOS Factor
    (48) Factor -> . ID
    (49) Factor -> . CTE_ENT
    (50) Factor -> . CTE_FLOT

    LPAREN          shift and go to state 48
    MAS             shift and go to state 44
    MENOS           shift and go to state 46
    ID              shift and go to state 41
    CTE_ENT         shift and go to state 49
    CTE_FLOT        shift and go to state 50

    Factor                         shift and go to state 72

state 45

    (41) Exp -> Termino .
    (42) Termino -> Termino . POR Factor
    (43) Termino -> Termino . DIV Factor

    MAS             reduce using rule 41 (Exp -> Termino .)
    MENOS           reduce using rule 41 (Exp -> Termino .)
    MAYOR           reduce using rule 41 (Exp -> Termino .)
    MENOR           reduce using rule 41 (Exp -> Termino .)
    DIF             reduce using rule 41 (Exp -> Termino .)
    IGUALDAD        reduce using rule 41 (Exp -> Termino .)
    MAYORIG         reduce using rule 41 (Exp -> Termino .)
    MENORIG         reduce using rule 41 (Exp -> Termino .)
    PTOCOMA         reduce using rule 41 (Exp -> Termino .)
    RPAREN          reduce using rule 41 (Exp -> Termino .)
    COMA            reduce using rule 41 (Exp -> Termino .)
    POR             shift and go to state 73
    DIV             shift and go to state 74


state 46
